<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.fragments.Event_fragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/post_event_img"
            android:src="@drawable/img"
            android:layout_gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/post_event_img_piker"
            android:text="@string/select_img"
            />

    </LinearLayout>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="30dp"
          android:hint="@string/enter_event_name"
          android:textSize="30sp"
          android:layout_marginTop="20dp"
          android:id="@+id/post_event_name"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="30dp"
          android:layout_marginHorizontal="30dp"
          >

          <TextView
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="30dp"
              android:text="@string/date"
              android:id="@+id/post_event_date"
              android:textSize="20sp"
              android:layout_gravity="center"
              />

          <ImageButton
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_marginHorizontal="20dp"
              android:src="@drawable/baseline_calendar_month_24"
              android:id="@+id/post_event_date_picker"
              />

      </LinearLayout>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="20dp"
          android:id="@+id/post_event_submit"
          android:text="@string/submit"
          android:layout_marginTop="30dp"
          />

  </LinearLayout>


</FrameLayout>